--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
         <input type="number" id="tiempo-descanso" min="1" value="3">
         <button id="iniciar">Iniciar</button>
         <button id="pausar">Pausar</button>
-        <div id="temporizador"></div>
     </div>
+    <div class="temporizador-container">
+        <h1 class="leyenda">Listo para empezar?</h1>
+        <div id="temporizador" class="temporizador"></div>
+    </div>
+    <footer class="footer">
+        <p>2024 Mianlo</p>
+        <p>&copy; Todos los derechos reservados</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
